--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@vercel/speed-insights": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.1"
+    "react-inlinesvg": "^4.2.0",
+    "react-router-dom": "^7.8.1",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "scripts": {
     "dev": "vite",
@@ -33,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/rollup": "^8.1.0",
     "@vitejs/plugin-react": "^5.0.1",
     "vite": "^7.1.3"
   }
