--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-inlinesvg": "^4.2.0",
     "react-router-dom": "^7.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vite-plugin-svgr": "^4.3.0"
   },
   "scripts": {
